suricata log parsing work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -109,6 +109,24 @@ filter {
                  rename => { "[suricata][dest_port]" => "destination.port" }
                  rename => { "[suricata][src_ip]" => "source.ip" }
                  rename => { "[suricata][src_port]" => "source.port" }
+                 rename => { "[suricata][proto]" => "ipProtocol" }
+        }
+
+        # transport protocol (e.g., udp, tcp, etc.)
+        if ([ipProtocol]) {
+          translate {
+            id => "translate_suricata_proto"
+            source => "[ipProtocol]"
+            target => "[network][transport]"
+            dictionary_path => "/etc/ip_protocol_number_to_name.yaml"
+          }
+          # ECS - ipProtocol -> network.iana_number
+          mutate { id => "mutate_add_field_suricata_ecs_network_iana_number"
+                   add_field => { "[network][iana_number]" => "%{[ipProtocol]}" } }
+        }
+        if ([network][transport]) {
+          mutate { id => "mutate_merge_suricata_proto"
+                   merge => { "[protocol]" => "[network][transport]" } }
         }
 
         ###
