suricata log parsing work in progress

--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -94,6 +94,14 @@ filter {
     }
   }
 
+  # ECS - event.category based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
+  translate {
+    id => "translate_ecs_event_category"
+    source => "[event][dataset]"
+    target => "[event][category]"
+    dictionary_path => "/etc/zeek_log_ecs_categories.yaml"
+  }
+
   # event.provider
   if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_enrichment"
                                      add_field => { "[event][provider]" => "malcolm" } } }
