--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -36,7 +36,7 @@ filter {
 
         # set document ID
         mutate { id => "mutate_add_field_suricata_without_flow_id_document_id"
-                 add_field => { "[malcolmDocId]" => "%{[suricata][event_type]}-%{[suricata][flow_id]}:%{[@metadata][uuid]}" } }
+                 add_field => { "[malcolmDocId]" => "%{[suricata][event_type]}:%{[@metadata][uuid]}" } }
 
 
         # take care of log timestamps in the formats all the different tools want them (phew!)
@@ -59,11 +59,6 @@ filter {
           mutate { id => "tag_suricata_empty_timestamp_set"
                    add_tag => [ "_missing_timestamp" ] }
         }
-        date {
-          id => "date_suricata_timestamp_match"
-          match => [ "[suricata][timestamp]", "ISO8601" ]
-          target => "[@timestamp]"
-        }
 
         ruby {
           id => "ruby_suricata_timestamp_calc"
@@ -81,24 +76,6 @@ filter {
             event.set('[length]', durationMs)
             event.set('[event][duration]', 1000000*durationMs)
           "
-        }
-
-        date {
-          id => "date_suricata_timestamp_iso_match"
-          match => [ "[suricata][timestamp]", "ISO8601" ]
-          target => "[suricata][timestamp]"
-        }
-        if ([suricata][flow]) {
-          date {
-            id => "date_suricata_flow_start_iso_match"
-            match => [ "[suricata][flow][start]", "ISO8601" ]
-            target => "[suricata][flow][start]"
-          }
-          date {
-            id => "date_suricata_flow_end_iso_match"
-            match => [ "[suricata][flow][end]", "ISO8601" ]
-            target => "[suricata][flow][end]"
-          }
         }
 
         #Renaming the global fields of every Suricata event type
@@ -191,32 +168,21 @@ filter {
                 rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
         }
 
-        #This is done in security onion, might be good to add, but not including it yet
-        #Not in common schema, still think it would be helpful, needs to be added to Malcolm
-        # if [event_type] == "alert" {
-        #         if [alert][severity] == 1 {
-        #                 mutate {
-        #                         add_field => { "event.severity_name" => "High" }
-        #                 }
-        #         }
-        #         if [alert][severity] == 2 {
-        #                 mutate {
-        #                         add_field => { "event.severity_name" => "Medium" }
-        #                 }
-        #         }
-        #         if [alert][severity] == 3 {
-        #                 mutate {
-        #                         add_field => { "event.severity_name" => "Low" }
-        #                 }
-        #         }
-        # }
-
         if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
                                            add_field => { "[event][provider]" => "suricata" } } }
 
         # rename suricata event type (eg., alert, dns, etc.) to event.dataset
         mutate { id => "mutate_rename_suricata_event_type"
                  rename => { "[suricata][event_type]" => "[event][dataset]" } }
+
+        # ECS - event.kind based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
+        if ([event][dataset] == "alert") {
+          mutate { id => "mutate_add_field_suricata_ecs_event_kind_alert"
+                   add_field => { "[event][kind]" => "alert" } }
+        } else {
+          mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
+                   add_field => { "[event][kind]" => "event" } }
+        }
 
     } else {
         drop { id => "drop_suricata_invalid_logs" }
