--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -26,6 +26,8 @@ command=python3 /opt/pcap_suricata_processor.py
   --suricata /usr/bin/suricata
   --autotag "%(ENV_AUTO_TAG)s"
   --autosuricata "%(ENV_SURICATA_AUTO_ANALYZE_PCAP_FILES)s"
+  --suricata-config "%(ENV_SURICATA_CONFIG_FILE)s"
+  --suricata-directory "%(ENV_SURICATA_LOG_DIR)s"
 startsecs=15
 startretries=1
 stopasgroup=true
