suricata log parsing work in progress

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -213,7 +213,7 @@ filter {
       network => [ "0.0.0.0/0" ]
     }
     if (![network][type]) {
-      mutate { id => "mutate_add_network_type_ipv4_source"
+      mutate { id => "mutate_add_network_type_ipv6_source"
                add_field => { "[network][type]" => "ipv6" } }
     }
   } # if ([source][ip])
@@ -289,7 +289,7 @@ filter {
         network => [ "0.0.0.0/0" ]
       }
       if (![network][type]) {
-        mutate { id => "mutate_add_network_type_ipv4_dest"
+        mutate { id => "mutate_add_network_type_ipv6_dest"
                  add_field => { "[network][type]" => "ipv6" } }
       }
     }
@@ -329,7 +329,7 @@ filter {
               event.set('[event][freq_score_v2]', scoresv2) unless (scoresv2.length == 0)
             end"
     }
-  } # end if dns.ip
+  } # end if dns.host
 
   if ([dns][ip]) and ([dns][ip][0]) {
     # if this is a DNS record with an IP, GeoIP it as well
