--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -80,13 +80,13 @@ filter {
 
         #Renaming the global fields of every Suricata event type
         mutate { id => "mutate_suricata_rename_global_fields"
-                 rename => { "[suricata][app_proto]" => "network.protocol" }
-                 rename => { "[suricata][community_id]" => "network.community_id" }
-                 rename => { "[suricata][dest_ip]" => "destination.ip" }
-                 rename => { "[suricata][dest_port]" => "destination.port" }
-                 rename => { "[suricata][src_ip]" => "source.ip" }
-                 rename => { "[suricata][src_port]" => "source.port" }
-                 rename => { "[suricata][proto]" => "ipProtocol" }
+                 rename => { "[suricata][app_proto]" => "[network][protocol]" }
+                 rename => { "[suricata][community_id]" => "[network][community_id]" }
+                 rename => { "[suricata][dest_ip]" => "[destination][ip]" }
+                 rename => { "[suricata][dest_port]" => "[destination][port]" }
+                 rename => { "[suricata][src_ip]" => "[source][ip]" }
+                 rename => { "[suricata][src_port]" => "[source][port]" }
+                 rename => { "[suricata][proto]" => "[ipProtocol]" }
         }
 
         # transport protocol (e.g., udp, tcp, etc.)
@@ -166,6 +166,12 @@ filter {
                 rename => { "[suricata][fileinfo][size]" => "[file][size]"}
                 rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
                 rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
+        }
+
+        if ([suricata][pcap_filename]) {
+          # trim path portion of suricata.pcap_filename
+          mutate { id => "mutate_gsub_suricata_pcap_filename_path"
+                   gsub => [ "[suricata][pcap_filename]", "^.*/", "" ] }
         }
 
         if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
