calculate malcolmDocId differently

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -480,6 +480,9 @@ filter {
     remove_field => [
       "[beat]",
       "[agent][ephemeral_id]",
+      "[agent][id]",
+      "[agent][type]",
+      "[agent][version]",
       "[log][offset]",
       "[input][type]",
       "[prospector]",
