--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -8,19 +8,12 @@ filter {
                source => "message"
                target => "suricata" }
 
-
         # drop fields we don't need
         mutate { id => "mutate_remove_field_suricata_message_and_stats"
-                 remove_field => [ "[message]",
-                                   "[suricata][stats]" ] }
+                 remove_field => [ "[suricata][stats]" ] }
 
-
-        # generate a UUID for the document ID
-        uuid {
-          id => "uuid_suricata_random_uuid"
-          target    => "[@metadata][uuid]"
-          overwrite => true
-        }
+        if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
+                                           add_field => { "[event][provider]" => "suricata" } } }
 
         if ([suricata][flow_id]) {
           # flow ID is sort of equivalent to zeek's conn UID
@@ -34,10 +27,15 @@ filter {
                    merge => { "[event][id]" => "[suricata][flow_id]" } }
         }
 
-        # set document ID
-        mutate { id => "mutate_add_field_suricata_without_flow_id_document_id"
-                 add_field => { "[malcolmDocId]" => "%{[suricata][event_type]}:%{[@metadata][uuid]}" } }
-
+        # create a repeatable fingerprint for document ID
+        fingerprint {
+          id => "fingerprint_suricata_malcolm_doc_id"
+          source => [ "[event][provider]", "[suricata][event_type]", "[suricata][timestamp]", "[suricata][flow_id]", "[log][file][path]", "[suricata][pcap_filename]", "[suricata][pcap_cnt]" ]
+          concatenate_sources => true
+          target => "[malcolmDocId]"
+          method => "SHA1"
+          base64encode => true
+        }
 
         # take care of log timestamps in the formats all the different tools want them (phew!)
         # @timestamp - date type
@@ -173,9 +171,6 @@ filter {
           mutate { id => "mutate_gsub_suricata_pcap_filename_path"
                    gsub => [ "[suricata][pcap_filename]", "^.*/", "" ] }
         }
-
-        if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
-                                           add_field => { "[event][provider]" => "suricata" } } }
 
         # rename suricata event type (eg., alert, dns, etc.) to event.dataset
         mutate { id => "mutate_rename_suricata_event_type"
