--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3847,6 +3847,10 @@ filter {
     drop { id => "drop_dissect_error" }
   }
 
+  # ECS - "zeek" -> event.provider
+  if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_zeek"
+                                     add_field => { "[event][provider]" => "zeek" } } }
+
   # rename the zeek child array to match the log type
   mutate { id => "mutate_rename_zeek_log_type"
            rename => { "[zeek_cols]" => "[zeek][%{[log_source]}]" } }
@@ -3869,6 +3873,16 @@ filter {
     rename => { "[zeek][%{[log_source]}][user]"            => "[related][user]" }
     rename => { "[zeek][%{[log_source]}][password]"        => "[related][password]" }
     rename => { "[zeek][%{[log_source]}][community_id]"    => "[network][community_id]" }
+  }
+
+  # create a repeatable fingerprint for document ID
+  fingerprint {
+    id => "fingerprint_zeek_malcolm_doc_id"
+    source => [ "[event][provider]", "[log_source]", "[zeek][ts]", "[zeek][uid]", "[zeek][fuid]", "[log][file][path]", "[log][offset]" ]
+    concatenate_sources => true
+    target => "[malcolmDocId]"
+    method => "SHA1"
+    base64encode => true
   }
 
   if ([source][mac]) {
@@ -3902,42 +3916,14 @@ filter {
     if (![rootId]) { mutate { id => "mutate_add_field_zeek_rootId"
                               add_field => { "[rootId]" => "%{[zeek][uid]}" } } }
 
-  } else {
-    # create something random for zeek connection UID
-    uuid {
-      id => "uuid_zeek_random_conn"
-      target    => "[@metadata][uuid]"
-      overwrite => true
-    }
-    mutate { id => "mutate_add_field_zeek_uid"
-             add_field => { "[zeek][uid]" => "%{[@metadata][uuid]}" } }
+    # ECS - zeek.uid -> event.id
+    mutate { id => "mutate_add_field_ecs_id_uid"
+             merge => { "[event][id]" => "[zeek][uid]" } }
   }
-  # ECS - zeek.uid -> event.id
-  mutate { id => "mutate_add_field_ecs_id_uid"
-           merge => { "[event][id]" => "[zeek][uid]" } }
 
   # if present, FUIDs are always a vector (comma-separated)
   if ([zeek][fuid]) { mutate { id => "mutate_split_zeek_fuids"
                                split => { "[zeek][fuid]" => "," } } }
-
-  if ([log_source] == "conn") {
-    mutate { id => "mutate_add_field_zeek_conn_malcolmv"
-             add_field => { "[malcolmDocId]" => "%{[zeek][uid]}" } }
-
-  } else {
-    if ([log][offset]) {
-      mutate { id => "mutate_add_field_zeek_not_conn_offset_malcolmDocId"
-               add_field => { "[malcolmDocId]" => "%{[zeek][uid]}-%{log_source}-%{[log][offset]}" } }
-    } else {
-      uuid {
-        id => "uuid_zeek_random_not_conn"
-        target    => "[@metadata][uuid]"
-        overwrite => true
-      }
-      mutate { id => "mutate_add_field_zeek_not_conn_malcolmDocId"
-               add_field => { "[malcolmDocId]" => "%{[zeek][uid]}-%{log_source}:%{[@metadata][uuid]}" } }
-    }
-  } # if/else for defining logOffset field used in document ID for OpenSearch
 
   if ([zeek][ts]) {
 
@@ -6122,10 +6108,6 @@ filter {
 
   } # end if/else if/else for specific log type logic
   #######################################################################################################
-
-  # ECS - "zeek" -> event.provider
-  if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_zeek"
-                                     add_field => { "[event][provider]" => "zeek" } } }
 
   # rename log_source (eg., conn, ssh, etc.) to event.dataset
   mutate { id => "mutate_rename_zeek_logType"
