calculate malcolmDocId differently

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -29,8 +29,12 @@ filter {
 
         # create a repeatable fingerprint for document ID
         fingerprint {
-          id => "fingerprint_suricata_malcolm_doc_id"
-          source => [ "[event][provider]", "[suricata][event_type]", "[suricata][timestamp]", "[suricata][flow_id]", "[log][file][path]", "[suricata][pcap_filename]", "[suricata][pcap_cnt]" ]
+          id => "fingerprint_suricata_malcolm_doc_id_flow_id"
+          source => [ "[event][provider]",
+                      "[suricata][event_type]",
+                      "[suricata][timestamp]",
+                      "[suricata][flow_id]",
+                      "[log][offset]" ]
           concatenate_sources => true
           target => "[malcolmDocId]"
           method => "SHA1"
