--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3878,7 +3878,12 @@ filter {
   # create a repeatable fingerprint for document ID
   fingerprint {
     id => "fingerprint_zeek_malcolm_doc_id"
-    source => [ "[event][provider]", "[log_source]", "[zeek][ts]", "[zeek][uid]", "[zeek][fuid]", "[log][file][path]", "[log][offset]" ]
+    source => [ "[event][provider]",
+                "[log_source]",
+                "[zeek][ts]",
+                "[zeek][uid]",
+                "[zeek][fuid]",
+                "[log][offset]" ]
     concatenate_sources => true
     target => "[malcolmDocId]"
     method => "SHA1"
