calculate log document ID fingerprint using murmur3 128-bit (using my fork until logstash-plugins/logstash-filter-fingerprint#66 is accepted)

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -67,10 +67,10 @@ valueAutoComplete=false
 
 # id information
 zeek.uid=db:zeek.uid;kind:termfield;friendly:Zeek Connection ID;help:Zeek Connection ID
-malcolmDocId=db:malcolmDocId;group:malcolm;kind:termfield;friendly:Malcolm Log ID;help:Malcolm Log ID
 event.provider=db:event.provider;group:malcolm;kind:termfield;friendly:Data Source;help:Data Source
 event.dataset=db:event.dataset;group:malcolm;kind:termfield;friendly:Log Type;help:Log Type
 event.id=db:event.id;group:malcolm;kind:termfield;friendly:Log ID;help:Log ID
+event.hash=db:event.hash;group:malcolm;kind:termfield;friendly:Log Hash;help:Log Hash
 event.hits=db:event.hits;group:malcolm;kind:integer;friendly:Hits;help:Hits
 zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:Malcolm Node
