--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -29,15 +29,16 @@ filter {
 
         # create a repeatable fingerprint for document ID
         fingerprint {
-          id => "fingerprint_suricata_malcolm_doc_id_flow_id"
+          id => "fingerprint_suricata_event_hash_flow_id"
           source => [ "[event][provider]",
                       "[suricata][event_type]",
                       "[suricata][timestamp]",
                       "[suricata][flow_id]",
                       "[log][offset]" ]
           concatenate_sources => true
-          target => "[malcolmDocId]"
-          method => "SHA1"
+          # uses event.hash
+          ecs_compatibility => "v1"
+          method => "MURMUR3_128"
           base64encode => true
         }
 
