--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3877,7 +3877,7 @@ filter {
 
   # create a repeatable fingerprint for document ID
   fingerprint {
-    id => "fingerprint_zeek_malcolm_doc_id"
+    id => "fingerprint_zeek_event_hash"
     source => [ "[event][provider]",
                 "[log_source]",
                 "[zeek][ts]",
@@ -3885,8 +3885,9 @@ filter {
                 "[zeek][fuid]",
                 "[log][offset]" ]
     concatenate_sources => true
-    target => "[malcolmDocId]"
-    method => "SHA1"
+    # uses event.hash
+    ecs_compatibility => "v1"
+    method => "MURMUR3_128"
     base64encode => true
   }
 
