include community_id in record hash to avoid collisions

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -33,6 +33,7 @@ filter {
           source => [ "[event][provider]",
                       "[suricata][event_type]",
                       "[suricata][timestamp]",
+                      "[suricata][community_id]",
                       "[suricata][flow_id]",
                       "[log][offset]" ]
           concatenate_sources => true
