--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3881,6 +3881,7 @@ filter {
     source => [ "[event][provider]",
                 "[log_source]",
                 "[zeek][ts]",
+                "[network][community_id]",
                 "[zeek][uid]",
                 "[zeek][fuid]",
                 "[log][offset]" ]
