--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,11 @@ x-zeek-variables: &zeek-variables
 x-suricata-variables: &suricata-variables
   SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
   SURICATA_AUTO_ANALYZE_PCAP_THREADS: 1
+  # suricata_config_populate.sh can use MANY more environment variables to tweak
+  # suricata.yaml (see https://github.com/OISF/suricata/blob/master/suricata.yaml.in and
+  # https://suricata.readthedocs.io/en/suricata-6.0.0/configuration/suricata-yaml.html).
+  # list the vars used:
+  # $ grep -Po "\bSURICATA_\w+" shared/bin/suricata_config_populate.sh | sort -u
 
 x-dashboards-helper-variables: &dashboards-helper-variables
   OPENSEARCH_INDEX_SIZE_PRUNE_LIMIT : '0'
