--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -468,13 +468,7 @@ filter {
              add_field => { "[node]" => "logs" } }
   }
 
-  if ([log][file][path]) {
-    # trim path portion of log.file.path
-    mutate { id => "mutate_gsub_field_log_file_path"
-             gsub => [ "[log][file][path]", "^.*/", "" ] }
-  }
-
-  # remove some useless beats-related fields
+  # remove some fields we don't need (or don't need anymore)
   mutate {
     id => "mutate_remove_field_beats_useless"
     remove_field => [
@@ -484,6 +478,7 @@ filter {
       "[agent][type]",
       "[agent][version]",
       "[log][offset]",
+      "[log][file][path]",
       "[input][type]",
       "[prospector]",
       "[message]"
