--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -12,6 +12,22 @@ filter {
         mutate { id => "mutate_remove_field_suricata_message_and_stats"
                  remove_field => [ "[suricata][stats]" ] }
 
+        # tags may have been specified, like: eve-123456789-1-(tagA,tagB,tagC).json, extract the tags
+        ruby {
+          id => "ruby_suricata_tags_extract"
+          code => "
+            if fileParts = event.get('[log][file][path]').split('/').last.match(/eve-\d+-\d+-(?:\((.*)\))?\.json/i) then
+              tags = fileParts.captures[0]
+              unless tags.nil?
+                filenameTags = tags.split(',')
+                filenameTags.delete_if{|v| ((v == nil) or (v == '') or (v !~ /\D/) or (v =~ /\A\s*(eve|pcap|dmp|log|bro|zeek|suricata|tcpdump|netsniff|autozeek|autosuricata)s?\s*\z/i))}
+                event.set('[@metadata][suricata_log_tags]', filenameTags.uniq) unless (filenameTags.length == 0)
+              end
+            end"
+        }
+        if ([@metadata][suricata_log_tags]) { mutate { id => "mutate_merge_suricata_log_tags"
+                                                       merge => { "[tags]" => "[@metadata][suricata_log_tags]" } } }
+
         if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
                                            add_field => { "[event][provider]" => "suricata" } } }
 
