--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -64,8 +64,8 @@ filter {
             event.set('[@metadata][zeek_fields_bitmap]', zeekFieldsTags[2].to_i(16))
           end
         end
-        filenameTags.delete_if{|v| ((v == nil) or (v == '') or (v !~ /\D/) or (v =~ /\A\s*(ZEEKFLDx|autocarve)/i) or (v =~ /\A\s*(pcap|dmp|log|bro|zeek|tcpdump|netsniff|autozeek)s?\s*\z/i) or (v == event.get('[log_source]')))}
-        event.set('[@metadata][zeek_log_tags]', filenameTags.uniq)
+        filenameTags.delete_if{|v| ((v == nil) or (v == '') or (v !~ /\D/) or (v =~ /\A\s*(ZEEKFLDx|autocarve)/i) or (v =~ /\A\s*(pcap|dmp|log|bro|zeek|suricata|tcpdump|netsniff|autozeek|autosuricata)s?\s*\z/i) or (v == event.get('[log_source]')))}
+        event.set('[@metadata][zeek_log_tags]', filenameTags.uniq) unless (filenameTags.length == 0)
       "
       #
       #  ZEEKFLDx00x01FFFFFF
