--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,11 +90,11 @@ x-suricata-variables: &suricata-variables
   SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
   SURICATA_AUTO_ANALYZE_PCAP_THREADS: 1
   SURICATA_CUSTOM_RULES_ONLY: 'false'
-  # suricata_config_populate.sh can use MANY more environment variables to tweak
+  # suricata_config_populate.py can use MANY more environment variables to tweak
   # suricata.yaml (see https://github.com/OISF/suricata/blob/master/suricata.yaml.in and
   # https://suricata.readthedocs.io/en/suricata-6.0.0/configuration/suricata-yaml.html).
   # list the vars used:
-  # $ grep -Po "\bSURICATA_\w+" shared/bin/suricata_config_populate.sh | sort -u
+  # $ grep -Po "\bSURICATA_\w+" shared/bin/suricata_config_populate.py | sort -u
 
 x-dashboards-helper-variables: &dashboards-helper-variables
   OPENSEARCH_INDEX_SIZE_PRUNE_LIMIT : '0'
