--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -43,22 +43,6 @@ filter {
                    merge => { "[event][id]" => "[suricata][flow_id]" } }
         }
 
-        # create a repeatable fingerprint for document ID
-        fingerprint {
-          id => "fingerprint_suricata_event_hash_flow_id"
-          source => [ "[event][provider]",
-                      "[suricata][event_type]",
-                      "[suricata][timestamp]",
-                      "[suricata][community_id]",
-                      "[suricata][flow_id]",
-                      "[log][offset]" ]
-          concatenate_sources => true
-          # uses event.hash
-          ecs_compatibility => "v1"
-          method => "MURMUR3_128"
-          base64encode => true
-        }
-
         # take care of log timestamps in the formats all the different tools want them (phew!)
         # @timestamp - date type
         # suricata.timestamp - ISO8601-formatted string
@@ -107,6 +91,7 @@ filter {
                  rename => { "[suricata][src_ip]" => "[source][ip]" }
                  rename => { "[suricata][src_port]" => "[source][port]" }
                  rename => { "[suricata][proto]" => "[ipProtocol]" }
+                 rename => { "[suricata][event_type]" => "[event][dataset]" }
         }
 
         # transport protocol (e.g., udp, tcp, etc.)
@@ -125,6 +110,7 @@ filter {
           mutate { id => "mutate_merge_suricata_proto"
                    merge => { "[protocol]" => "[network][transport]" } }
         }
+
 
         ###
         #
@@ -154,11 +140,11 @@ filter {
                 rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
         }
 
+        #Specific tls renaming
         mutate { id => "mutate_remove_field_suricata_ja3_strings"
                  remove_field => [ "[suricata][tls][ja3][string]",
                                    "[suricata][tls][ja3s][string]" ] }
 
-        #Specific tls renaming
         mutate {
                  id => "mutate_rename_suricata_tls"
                  rename => { "[suricata][tls][version]" => "[tls][version]"}
@@ -194,10 +180,6 @@ filter {
                    gsub => [ "[suricata][pcap_filename]", "^.*/", "" ] }
         }
 
-        # rename suricata event type (eg., alert, dns, etc.) to event.dataset
-        mutate { id => "mutate_rename_suricata_event_type"
-                 rename => { "[suricata][event_type]" => "[event][dataset]" } }
-
         # ECS - event.kind based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
         if ([event][dataset] == "alert") {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_alert"
@@ -205,6 +187,22 @@ filter {
         } else {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
                    add_field => { "[event][kind]" => "event" } }
+        }
+
+        # create a repeatable fingerprint for document ID
+        fingerprint {
+          id => "fingerprint_suricata_event_hash_flow_id"
+          source => [ "[event][provider]",
+                      "[event][dataset]",
+                      "[suricata][timestamp]",
+                      "[network][community_id]",
+                      "[suricata][flow_id]",
+                      "[log][offset]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v1"
+          method => "MURMUR3_128"
+          base64encode => true
         }
 
     } else {
