suricata log parsing work in progress

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -53,33 +53,6 @@ filter {
         }
       }
 
-      if ([source][oui]) {
-
-        # merge source.oui into srcOui array (with a count field)
-        mutate { id => "mutate_merge_field_srcOui"
-                 merge => { "[srcOui]" => "[source][oui]" } }
-        ruby {
-          id => "ruby_enrich_src_oui_cnt"
-          path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
-          script_params => {
-            "source" => "[srcOui]"
-            "target" => "[srcOuiCnt]"
-          }
-        }
-
-        # if this is a DHCP log type, copy srcOui to dhcp.oui
-        if ([dhcp][mac]) {
-          mutate {
-            id => "mutate_add_fields_dhcp_oui"
-            add_field => { "[dhcp][oui]" => "%{[srcOui]}" }
-          }
-          mutate {
-            id => "mutate_add_fields_dhcp_ouiCnt"
-            add_field => { "[dhcp][ouiCnt]" => "%{[srcOuiCnt]}" }
-          }
-        }
-      }
-
     } # end if [source][mac]
 
     if ([destination][mac]) {
@@ -120,21 +93,6 @@ filter {
           mutate {
             id => "mutate_add_fields_destination_oui_from_ics_guess_oui_dst"
             add_field => { "[destination][oui]" => "%{[@metadata][ics_guess_oui_dst]}" }
-          }
-        }
-      }
-
-      if ([destination][oui]) {
-
-        # merge destination.oui into dstOui array (with a count of 1)
-        mutate { id => "mutate_merge_field_dstOui"
-                 merge => { "[dstOui]" => "[destination][oui]" } }
-        ruby {
-          id => "ruby_enrich_dst_oui_cnt"
-          path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
-          script_params => {
-            "source" => "[dstOui]"
-            "target" => "[dstOuiCnt]"
           }
         }
       }
@@ -436,9 +394,7 @@ filter {
 
   ################################################################################################
 
-  ######## JA3 community hashes lookup ###########################################################
   # ja3/ja3s are arrays at this point, as Arkime expects them to be
-
   if ([tls][ja3]) and ([tls][ja3][0]) {
     translate {
       id => "translate_ssl_ja3"
@@ -457,7 +413,25 @@ filter {
     }
   }
 
-  ################################################################################################
+  # tag ICS services from if not already tagged
+  if ("ics" not in [tags]) and
+     (("bacnet" in [network][protocol]) or
+      ("bsap" in [network][protocol]) or
+      ("cip" in [network][protocol]) or
+      ("cotp" in [network][protocol]) or
+      ("dnp3" in [network][protocol]) or
+      ("ecat" in [network][protocol]) or
+      ("enip" in [network][protocol]) or
+      ("ethercat" in [network][protocol]) or
+      ("iso_cotp" in [network][protocol]) or
+      ("opcua-binary" in [network][protocol]) or
+      ("modbus" in [network][protocol]) or
+      ("profinet" in [network][protocol]) or
+      ("profinet_dce_rpc" in [network][protocol]) or
+      ("s7comm" in [network][protocol])) {
+    mutate { id => "mutate_add_tag_ics_from_network_protocol"
+             add_tag => [ "ics" ] }
+  }
 
   # this identifies which node the log came from
   if ([host][name]) {
