--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -26,6 +26,21 @@ filter {
   if ([server][domain]) {              mutate { id => "mutate_merge_ecs_related_hosts_server_domain"
                                                 merge => { "[related][hosts]" => "[server][domain]" } } }
 
+  if ([ipProtocol]) {
+    # ECS - ipProtocol -> network.iana_number
+    mutate { id => "mutate_add_field_ecs_network_iana_number"
+             add_field => { "[network][iana_number]" => "%{[ipProtocol]}" } }
+  }
+
+  if ([network][protocol]) {
+    # ECS - network.protocol -> network.application
+    # TODO: what's the difference? https://www.elastic.co/guide/en/ecs/current/ecs-network.html
+    if ([network][protocol]) {
+      mutate { id => "mutate_add_field_ecs_network_application"
+               add_field => { "[network][application]" => "%{[network][protocol]}" } }
+    }
+  }
+
   # network.direction (from tags assigned during 11_lookups.conf)
   if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
     mutate { id => "mutate_add_field_metadata_network_direction_internal"
@@ -79,6 +94,18 @@ filter {
   # ecs.version is required in all events - https://www.elastic.co/guide/en/ecs/current/ecs-ecs.html
   if (![ecs][version]) { mutate { id => "mutate_add_field_ecs_version"
                                   add_field => { "[ecs][version]" => "1.6.0" } } }
+
+  if ([firstPacket]) and (![event][start]) {
+    # ECS - firstPacket -> event.start
+    mutate { id => "mutate_add_field_ecs_event_start"
+             add_field => { "[event][start]" => "%{[firstPacket]}" } }
+  }
+
+  if ([lastPacket]) and (![event][end]) {
+    # ECS - lastPacket -> event.end
+    mutate { id => "mutate_add_field_ecs_event_end"
+             add_field => { "[event][end]" => "%{[lastPacket]}" } }
+  }
 
   # event.ingested
   if (![event][ingested]) {
