--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -111,6 +111,24 @@ filter {
                    merge => { "[protocol]" => "[network][transport]" } }
         }
 
+        # network (application) protocol
+        if ([suricata][app_proto_orig]) {
+          mutate { id => "mutate_merge_suricata_app_proto_orig"
+                   merge => { "[network][protocol]" => "[suricata][app_proto_orig]" } }
+        }
+        if ([suricata][app_proto_expected]) {
+          mutate { id => "mutate_merge_suricata_app_proto_expected"
+                   merge => { "[network][protocol]" => "[suricata][app_proto_expected]" } }
+        }
+        if ([suricata][app_proto_tc]) {
+          mutate { id => "mutate_merge_suricata_app_proto_tc"
+                   merge => { "[network][protocol]" => "[suricata][app_proto_tc]" } }
+        }
+        if ([suricata][app_proto_ts]) {
+          mutate { id => "mutate_merge_suricata_app_proto_ts"
+                   merge => { "[network][protocol]" => "[suricata][app_proto_ts]" } }
+        }
+
 
         ###
         #
