--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -1,5 +1,7 @@
 # Copyright (c) 2022 Battelle Energy Alliance, LLC.  All rights reserved.
 
+# take array fields that are already generic (i.e., ECS or Arkime) and deduplicate them
+
 filter {
 
   # all hashed values #########################################################
@@ -68,6 +70,17 @@ filter {
     }
   }
 
+  # network protocol ##########################################################
+  if ([network][protocol]) {
+    ruby {
+      id => "ruby_network_protocol_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[network][protocol]"
+      }
+    }
+  }
+
   # network protocol (service) version ########################################
   if ([network][protocol_version]) {
     ruby {
@@ -92,7 +105,7 @@ filter {
 
   if ([event][result]) {
     ruby {
-      id => "ruby_zeek_result_uniq"
+      id => "ruby_event_result_uniq"
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
         "field" => "[event][result]"
@@ -125,7 +138,7 @@ filter {
   # file path #################################################################
   if ([file][path]) {
     ruby {
-      id => "ruby_zeek_filename_uniq"
+      id => "ruby_event_file_path_uniq"
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
         "field" => "[file][path]"
@@ -133,25 +146,74 @@ filter {
     }
   }
 
-  # deduplicate and count tags ################################################
+  # http ######################################################################
+  if ([http][bodyMagic]) {
+    ruby {
+      id => "ruby_http_bodyMagic_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[http][bodyMagic]"
+      }
+    }
+  }
+
+  # email ######################################################################
+  if ([email][src]) {
+    ruby {
+      id => "ruby_email_src_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[email][src]"
+      }
+    }
+  }
+
+  if ([email][dst]) {
+    ruby {
+      id => "ruby_email_dst_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[email][dst]"
+      }
+    }
+  }
+
+  # smb ########################################################################
+  if ([smb][filename]) {
+    ruby {
+      id => "ruby_smb_files_filename_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[smb][filename]"
+      }
+    }
+  }
+  if ([smb][host]) {
+    ruby {
+      id => "ruby_smb_files_host_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[smb][host]"
+      }
+    }
+  }
+  if ([smb][share]) {
+    ruby {
+      id => "ruby_smb_files_share_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[smb][share]"
+      }
+    }
+  }
+
+  # deduplicate tags ##########################################################
   ruby {
     id => "ruby_tags_deduplicate"
     path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
     script_params => {
       "field" => "tags"
     }
-  }
-  ruby {
-    id => "ruby_enrichment_tagsCnt"
-    path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
-    script_params => {
-      "source" => "[tags]"
-      "target" => "[tagsCnt]"
-    }
-  }
-  mutate {
-    id => "mutate_convert_enrichment_tagsCnt"
-    convert => { "[tagsCnt]" => "integer" }
   }
 
 }
