suricata log parsing work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -129,6 +129,121 @@ filter {
                    merge => { "[network][protocol]" => "[suricata][app_proto_ts]" } }
         }
 
+        if (![network][protocol]) {
+
+          if ([suricata][dhcp]) {
+            mutate { id => "mutate_add_field_suricata_dhcp"
+                     add_field => { "[@metadata][suricata_dhcp]" => "dhcp" } }
+            mutate { id => "mutate_merge_suricata_dhcp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_dhcp]" } }
+          }
+          if ([suricata][dnp3]) {
+            mutate { id => "mutate_add_field_suricata_dnp3"
+                     add_field => { "[@metadata][suricata_dnp3]" => "dnp3" } }
+            mutate { id => "mutate_merge_suricata_dnp3"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_dnp3]" } }
+          }
+          if ([suricata][dns]) {
+            mutate { id => "mutate_add_field_suricata_dns"
+                     add_field => { "[@metadata][suricata_dns]" => "dns" } }
+            mutate { id => "mutate_merge_suricata_dns"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_dns]" } }
+          }
+          if ([suricata][ftp]) {
+            mutate { id => "mutate_add_field_suricata_ftp"
+                     add_field => { "[@metadata][suricata_ftp]" => "ftp" } }
+            mutate { id => "mutate_merge_suricata_ftp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_ftp]" } }
+          }
+          if ([suricata][http]) {
+            mutate { id => "mutate_add_field_suricata_http"
+                     add_field => { "[@metadata][suricata_http]" => "http" } }
+            mutate { id => "mutate_merge_suricata_http"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_http]" } }
+          }
+          if ([suricata][icmp_code]) or
+             ([suricata][icmp_type]) or
+             ([suricata][response_icmp_code]) or
+             ([suricata][response_icmp_type]) {
+            mutate { id => "mutate_add_field_suricata_icmp"
+                     add_field => { "[@metadata][suricata_icmp]" => "icmp" } }
+            mutate { id => "mutate_merge_suricata_icmp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_icmp]" } }
+          }
+          if ([suricata][ikev2]) {
+            mutate { id => "mutate_add_field_suricata_ikev2"
+                     add_field => { "[@metadata][suricata_ikev2]" => "ikev2" } }
+            mutate { id => "mutate_merge_suricata_ikev2"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_ikev2]" } }
+          }
+          if ([suricata][krb5]) {
+            mutate { id => "mutate_add_field_suricata_krb5"
+                     add_field => { "[@metadata][suricata_krb5]" => "krb5" } }
+            mutate { id => "mutate_merge_suricata_krb5"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_krb5]" } }
+          }
+          if ([suricata][nfs]) {
+            mutate { id => "mutate_add_field_suricata_nfs"
+                     add_field => { "[@metadata][suricata_nfs]" => "nfs" } }
+            mutate { id => "mutate_merge_suricata_nfs"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_nfs]" } }
+          }
+          if ([suricata][rdp]) {
+            mutate { id => "mutate_add_field_suricata_rdp"
+                     add_field => { "[@metadata][suricata_rdp]" => "rdp" } }
+            mutate { id => "mutate_merge_suricata_rdp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_rdp]" } }
+          }
+          if ([suricata][rpc]) {
+            mutate { id => "mutate_add_field_suricata_rpc"
+                     add_field => { "[@metadata][suricata_rpc]" => "rpc" } }
+            mutate { id => "mutate_merge_suricata_rpc"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_rpc]" } }
+          }
+          if ([suricata][sip]) {
+            mutate { id => "mutate_add_field_suricata_sip"
+                     add_field => { "[@metadata][suricata_sip]" => "sip" } }
+            mutate { id => "mutate_merge_suricata_sip"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_sip]" } }
+          }
+          if ([suricata][smb]) {
+            mutate { id => "mutate_add_field_suricata_smb"
+                     add_field => { "[@metadata][suricata_smb]" => "smb" } }
+            mutate { id => "mutate_merge_suricata_smb"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_smb]" } }
+          }
+          if ([suricata][smtp]) {
+            mutate { id => "mutate_add_field_suricata_smtp"
+                     add_field => { "[@metadata][suricata_smtp]" => "smtp" } }
+            mutate { id => "mutate_merge_suricata_smtp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_smtp]" } }
+          }
+          if ([suricata][snmp]) {
+            mutate { id => "mutate_add_field_suricata_snmp"
+                     add_field => { "[@metadata][suricata_snmp]" => "snmp" } }
+            mutate { id => "mutate_merge_suricata_snmp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_snmp]" } }
+          }
+          if ([suricata][ssh]) {
+            mutate { id => "mutate_add_field_suricata_ssh"
+                     add_field => { "[@metadata][suricata_ssh]" => "ssh" } }
+            mutate { id => "mutate_merge_suricata_ssh"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_ssh]" } }
+          }
+          if ([suricata][tftp]) {
+            mutate { id => "mutate_add_field_suricata_tftp"
+                     add_field => { "[@metadata][suricata_tftp]" => "tftp" } }
+            mutate { id => "mutate_merge_suricata_tftp"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_tftp]" } }
+          }
+          if ([suricata][tls]) {
+            mutate { id => "mutate_add_field_suricata_tls"
+                     add_field => { "[@metadata][suricata_tls]" => "tls" } }
+            mutate { id => "mutate_merge_suricata_tls"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_tls]" } }
+          }
+        }
+
 
         ###
         #
