--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -1,5 +1,96 @@
 filter {
 
+    # fields TODO:
+    # for ones with a *lot* of fields I'm just going to hand-wave a bit and tackle it when i get there
+    #
+    # suricata.alert.category - "Potentially Bad Traffic", "Attempted Administrator Privilege Gain", etc.
+    # suricata.alert.metadata.affected_product - something for ECS vulnerability?
+    # suricata.alert.metadata.attack_target    - ''
+    # suricata.alert.metadata.cve              - ''
+    # suricata.alert.metadata.deployment       - ''
+    # suricata.alert.metadata.former_category  - tags maybe? or maybe just ignore
+    # suricata.alert.metadata.malware_family
+    # suricata.alert.metadata.mitre_tactic_id
+    # suricata.alert.metadata.mitre_tactic_name
+    # suricata.alert.metadata.mitre_technique_id
+    # suricata.alert.metadata.mitre_technique_name
+    # suricata.alert.metadata.performance_impact
+    # suricata.alert.metadata.signature_severity - map to my severity
+    # suricata.alert.metadata.tag                - tags maybe
+    # suricata.alert.signature                   - normalize with my signatures
+    # suricata.alert.signature_id                - ''
+    # suricata.anomaly.app_proto                 - normalize into network.protocol
+    # suricata.anomaly.event                     - event.result maybe?
+    # suricata.dcerpc.interfaces.version         - network.protocol_version
+    # suricata.dcerpc.req.opnum                  - translate and map to event.action?
+    # suricata.dcerpc.response                   - event.result
+    # suricata.dcerpc.rpc_version                - network.protocol_version
+    # suricata.dhcp.assigned_ip                  -
+    # suricata.dhcp.client_mac                   -
+    # suricata.dhcp.dhcp_type                    - event.action or event.result?
+    # suricata.dhcp.type                         - event.action or event.result?
+    # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
+    # suricata.dns.....                          - examine individually and look at exising DNS stuff
+    # suricata.fileinfo.end / suricata.files.end - is this the size? i'm not seeing suricata.*.size
+    # suricata.fileinfo.state                    - event.result?
+    # suricata.files.filename                    - store like other paths/files
+    # suricata.files.size                        - is this the size? difference between fileinfo/files?
+    # suricata.files.state                       - event.result?
+    # suricata.flow.age                          - something with duration?
+    # suricata.flow.bytes*                       - store like other connection metrics
+    # suricata.flow.packet*                      - store like other connection metrics
+    # suricata.flow.reason                       - event.result? or just do whatever like we do with zeek conn
+    # suricata.flow.state                        - event.result? or just do whatever like we do with zeek conn
+    # suricata.ftp.reply                         - event.result
+    # suricata.ftp.dynamic_port                  - tie to another port field that's normalized?
+    # suricata.ftp.completion_code               - map to a string result and to event.result
+    # suricata.ftp.command                       - event.action
+    # suricata.http....                          - examine individually and look at exising HTTP stuff
+    # suricata.*icmp_code/*icmp_type             - event.action/event.result? does that make sense
+    # suricata.ikev2.payload                     - event.action?
+    # suricata.ikev2.version_*                   - network.protocol_version
+    # suricata.krb5.cname                        - user? related.user?
+    # suricata.krb5.error_code                   - event.result
+    # suricata.krb5.failed_request               - not sure, is this the action, or the failure, or the reason for the failure?
+    # suricata.krb5.msg_type                     - ''
+    # suricata.krb5.realm                        - related.host or something like that?
+    # suricata.krb5.sname                        - user? related.user? related.host or something like that?
+    # suricata.rdp....                           - examine individually and look at exising RDP stuff
+    # suricata.rfb....                           - examine individually and look at exising RFB stuff
+    # suricata.sip.code / suricata.sip.reason    - event.result
+    # suricata.sip.method                        - event.action
+    # suricata.sip.uri                           - related uri?
+    # suricata.sip.version                       - network.protocol_version
+    # suricata.smb....                           - examine individually and look at exising SMB stuff
+    # suricata.smtp.helo                         - related host?
+    # suricata.smtp.mail_from                    - related email
+    # suricata.smtp.rcpt_to                      - related email
+    # suricata.snmp.community                    - password? not really...
+    # suricata.snmp.error                        - event.result
+    # suricata.snmp.pdu_type                     - event.action or event.result
+    # suricata.snmp.trap_address                 - ip type? at least related.ip or related.host?
+    # suricata.snmp.trap_type                    - event.action or event.result
+    # suricata.snmp.usm                          - related user?
+    # suricata.snmp.version                      - network.protocol_version
+    # suricata.ssh....                           - examine individually and look at exising SSH stuff
+    # suricata.tcp....                           - examine individually and look at exising tcp/conn stuff
+    # suricata.tftp.file                         - normalize with other filenames
+    # suricata.tftp.packet                       - event.action?
+    # suricata.tls.from_proto                    - normalize with network.protocol?
+    # suricata.tls.notafter/notbefore            - date type
+    # suricata.tls.sni                           - related domain? freq?
+    # suricata.tunnel.dest_ip/dest_port          - normalize into destination?
+    # suricata.tunnel.src_ip/src_port            - normalize into source?
+    # suricata.tunnel.proto                      - map and normalize
+    # suricata.vlan                              - normalize with VLAN
+
+
+    # other TODO:
+    # remove "failed" from protocols?
+    #
+    #
+
+
     # If message looks like json, try to parse it as such. Otherwise, drop it like it's hot.
     if [message] =~ /^{.*}$/ {
 
@@ -131,6 +222,12 @@ filter {
 
         if (![network][protocol]) {
 
+          if ([suricata][dcerpc]) {
+            mutate { id => "mutate_add_field_suricata_dcerpc"
+                     add_field => { "[@metadata][suricata_dcerpc]" => "dce_rpc" } }
+            mutate { id => "mutate_merge_suricata_dcerpc"
+                     merge => { "[network][protocol]" => "[@metadata][suricata_dcerpc]" } }
+          }
           if ([suricata][dhcp]) {
             mutate { id => "mutate_add_field_suricata_dhcp"
                      add_field => { "[@metadata][suricata_dhcp]" => "dhcp" } }
@@ -302,6 +399,7 @@ filter {
         #Specific fileinfo renaming
         mutate {
                 id => "mutate_rename_suricata_fileinfo"
+                # todo? is this right? or is it suricata.fileinfo.end
                 rename => { "[suricata][fileinfo][size]" => "[file][size]"}
                 rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
                 rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
